# siliconflow

./: package.oo.yaml  pyproject.toml  requirements.txt
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
tasks/audio-to-text/: main.py  task.oo.yaml
tasks/image-generation/: main.ts  task.oo.yaml
tasks/speech-to-text/: main.py  task.oo.yaml
tasks/text-to-audio/: main.py  task.oo.yaml
